--- a/web/public/games/space-hunter/index.html
+++ b/web/public/games/space-hunter/index.html
@@ -6,11 +6,51 @@
     <script src="https://cdn.jsdelivr.net/npm/node-uuid@1.4.8/uuid.min.js"></script>
 </head>
 
+<style>
+    body {
+        color: white;
+        background-color: black;
+    }
+
+    #deathScreen {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        padding-top: 100px;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgb(0, 0, 0);
+        background-color: rgba(0, 0, 0, 0.4);
+    }
+
+    #deathScreenContent {
+        color: black;
+        text-align: center;
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 95%;
+        max-width: 500px;
+        border-radius: 15px;
+    }
+</style>
+
 <body>
     <div style="text-align: center;">
         <h1>Space Hunter</h1>
         <h2 id="playerHealth">Health: 3</h2>
         <h2 id="playerScore">Score: 0</h2>
+    </div>
+    <div id="deathScreen">
+        <div id="deathScreenContent">
+            <h2>You Died!</h>
+                <h3 id="finalScore">Your Score: 0</h3>
+                <button onclick="location.reload();">Restart</button>
+        </div>
     </div>
     <script>
         const webSocketProtocol = (location.protocol === 'https:') ? 'wss' : 'ws';
@@ -19,17 +59,41 @@
         const uuidv4 = window.uuid.v4;
         var ws = new WebSocket(socketUrl);
         const clientId = uuidv4();
-        ws.onopen = function() {                  
-            ws.send(JSON.stringify( {
+        ws.onopen = function () {
+            ws.send(JSON.stringify({
                 clientId: clientId
             }));
         };
 
-        ws.onmessage = function(message) {    
+        let updateStats = {
+            count: 0,
+            total: 0,
+            max: 0,
+            lastUpdate: Date.now()
+        }
+        function trackTimeToUpdate() {
+            if (updateStats.count == 60) {
+                console.log(`Average: ${updateStats.total / 60}ms`);
+                console.log(`Max: ${updateStats.max}ms`);
+                updateStats.count = 0;
+                updateStats.max = 0;
+                updateStats.total = 0;
+            }
+            updateStats.count++;
+            let timeDiff = Date.now() - updateStats.lastUpdate;
+            updateStats.lastUpdate = Date.now();
+            updateStats.total += timeDiff;
+            if (timeDiff > updateStats.max) {
+                updateStats.max = timeDiff;
+            }
+        }
+
+        ws.onmessage = function (message) {
+            trackTimeToUpdate();
             let data = JSON.parse(message.data);
             update(data);
         };
-        
+
         const gameWidth = window.innerWidth;
         const gameHeight = window.innerHeight / 1.3;
 
@@ -188,6 +252,7 @@
             this.cameras.main.zoom = 0.5;
             this.cameras.main.startFollow(player);
             game.input.addPointer();
+            game.input.mouse.requestPointerLock();
 
             this.input.on('pointerdown', function (pointer, time, lastFired) {
                 if (player.active === false) { return; }
@@ -218,21 +283,23 @@
 
         function update(data) {
             if (player === undefined) { return; }
-            if (!data.players[clientId]) { return endGame(); }
+            if (!data.players[clientId]) { return endGame(player.score); }
             player.x = data.players[clientId].x;
             player.y = data.players[clientId].y;
+            player.score = data.players[clientId].score;
+            player.health = data.players[clientId].health;
 
-            document.getElementById('playerHealth').innerHTML = `Health: ${data.players[clientId].health}`;
-            document.getElementById('playerScore').innerHTML = `Score: ${data.players[clientId].score}`;
+            document.getElementById('playerHealth').innerHTML = `Health: ${player.health}`;
+            document.getElementById('playerScore').innerHTML = `Score: ${player.score}`;
 
             player.rotation = Phaser.Math.Angle.Between(player.x, player.y, reticle.x, reticle.y);
             reticle.x = player.x + 350 * Math.cos(player.rotation);
             reticle.y = player.y + 350 * Math.sin(player.rotation);
             reticle.x += data.players[clientId].xSpeed;
-		    reticle.y += data.players[clientId].ySpeed;
+            reticle.y += data.players[clientId].ySpeed;
 
             for (let playerId in data.players) {
-                if (playerId === clientId) {continue;}
+                if (playerId === clientId) { continue; }
                 const otherPlayer = data.players[playerId];
 
                 let enemy = null;
@@ -269,7 +336,7 @@
                 if (!bullet) {
                     bullet = bullets.get().setActive(true).setVisible(true);
                     bullet.id = dataBullet.id;
-                } 
+                }
                 bullet.x = dataBullet.x;
                 bullet.y = dataBullet.y;
                 bullet.rotation = dataBullet.rotation;
@@ -288,9 +355,11 @@
             }));
             player.fire = false;
         }
-    
-        function endGame() {
-            //alert('GAME OVER');
+
+        function endGame(score) {
+            game.input.mouse.releasePointerLock();
+            document.getElementById('finalScore').innerHTML = `Your Score: ${score}`;
+            document.getElementById('deathScreen').style.display = "block";
         }
     </script>
 
