--- a/root/minecraft/index.html
+++ b/root/minecraft/index.html
@@ -20,7 +20,7 @@
             <main role="main" class="inner cover">
                 <h2 class="cover-heading">Minecraft Servers</h2>
                 <div id="gameList" class="lead">
-                    <a class="game-option" href="http://minecraft.whynotgame.com">
+                    <a class="game-option" href="http://minecraft.whynotgame.com/multicraft">
                         <h2>Multicraft Admin</h2>
                         <img src="/minecraft/images/multicraft.jpg">
                     </a>
