--- a/root/minecraft/tekxit.html
+++ b/root/minecraft/tekxit.html
@@ -21,7 +21,7 @@
                 <h2 class="cover-heading">Minecraft Servers</h2>
                 <p style="text-align: left; max-width: 500px; margin: auto;">
                     Name: Tekxit 3 Server<br>
-                    Server Address: minecraft/whynotgame.com<br>
+                    Server Address: minecraft.whynotgame.com<br>
                     Port: 25565<br>
                     Launcher Download: <a href="https://www.technicpack.net/download">https://www.technicpack.net/download</a>
                 </p>
