--- a/root/minecraft/vanilla.html
+++ b/root/minecraft/vanilla.html
@@ -21,7 +21,7 @@
                 <h2 class="cover-heading">Minecraft Servers</h2>
                 <p style="text-align: left; max-width: 500px; margin: auto;">
                     Name: Vanilla Minecraft Server<br>
-                    Server Address: minecraft/whynotgame.com:25566<br>
+                    Server Address: minecraft.whynotgame.com:25566<br>
                     Port: 25566<br>
                     Launcher Download: <a href="https://www.minecraft.net/en-us/download/">https://www.minecraft.net/en-us/download/</a>
                 </p>
